Consolidate code clones in Persistent* tests.
Change-Id: Ib46e300a3b3af36eab923e43f1b1faee7b1e2d38